samples/_failures_safe/1761152148_7908cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_edab258e.c: In function ‘main’:
./samples/SAFE/__tmp_edab258e.c:174:5: error: expected expression at end of input
  174 |     if (fgets(input, sizeof(input),
      |     ^~
./samples/SAFE/__tmp_edab258e.c:174:5: error: expected declaration or statement at end of input
